// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuItem
    item={
        Object {
            "meal": Object {
              "cost": 50,
              "img_url": null,
              "name": "name2",
            },
          }
    }
    onOrder={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="menu-item pt-3 pl-3 pr-3 m-1"
>
        <img
                alt="Food"
                className="img-fluid"
                src="placeholder.png"
        />
        <table
                className="table"
        >
                <tbody>
                        <tr>
                                <td
                                        className="p-2"
                                >
                                        Ksh. 
                                        50
                                </td>
                        </tr>
                        <tr>
                                <td
                                        className="p-2"
                                >
                                        name2
                                </td>
                        </tr>
                        <tr>
                                <td
                                        className="pb-0"
                                >
                                        <button
                                                className="btn btn-primary"
                                                onClick={[Function]}
                                        >
                                                Order Now
                                        </button>
                                </td>
                        </tr>
                </tbody>
        </table>
</div>,
      "className": "col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-3 text-center",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt="Food"
            className="img-fluid"
            src="placeholder.png"
/>,
          <table
            className="table"
>
            <tbody>
                        <tr>
                                    <td
                                                className="p-2"
                                    >
                                                Ksh. 
                                                50
                                    </td>
                        </tr>
                        <tr>
                                    <td
                                                className="p-2"
                                    >
                                                name2
                                    </td>
                        </tr>
                        <tr>
                                    <td
                                                className="pb-0"
                                    >
                                                <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                                >
                                                            Order Now
                                                </button>
                                    </td>
                        </tr>
            </tbody>
</table>,
        ],
        "className": "menu-item pt-3 pl-3 pr-3 m-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "Food",
            "className": "img-fluid",
            "src": "placeholder.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tbody>
              <tr>
                            <td
                                          className="p-2"
                            >
                                          Ksh. 
                                          50
                            </td>
              </tr>
              <tr>
                            <td
                                          className="p-2"
                            >
                                          name2
                            </td>
              </tr>
              <tr>
                            <td
                                          className="pb-0"
                            >
                                          <button
                                                        className="btn btn-primary"
                                                        onClick={[Function]}
                                          >
                                                        Order Now
                                          </button>
                            </td>
              </tr>
</tbody>,
            "className": "table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <tr>
                  <td
                                    className="p-2"
                  >
                                    Ksh. 
                                    50
                  </td>
</tr>,
                <tr>
                  <td
                                    className="p-2"
                  >
                                    name2
                  </td>
</tr>,
                <tr>
                  <td
                                    className="pb-0"
                  >
                                    <button
                                                      className="btn btn-primary"
                                                      onClick={[Function]}
                                    >
                                                      Order Now
                                    </button>
                  </td>
</tr>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="p-2"
>
                    Ksh. 
                    50
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Ksh. ",
                      50,
                    ],
                    "className": "p-2",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Ksh. ",
                    50,
                  ],
                  "type": "td",
                },
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="p-2"
>
                    name2
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "name2",
                    "className": "p-2",
                  },
                  "ref": null,
                  "rendered": "name2",
                  "type": "td",
                },
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="pb-0"
>
                    <button
                                        className="btn btn-primary"
                                        onClick={[Function]}
                    >
                                        Order Now
                    </button>
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <button
                      className="btn btn-primary"
                      onClick={[Function]}
>
                      Order Now
</button>,
                    "className": "pb-0",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Order Now",
                      "className": "btn btn-primary",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "Order Now",
                    "type": "button",
                  },
                  "type": "td",
                },
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
          "type": "table",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="menu-item pt-3 pl-3 pr-3 m-1"
>
          <img
                    alt="Food"
                    className="img-fluid"
                    src="placeholder.png"
          />
          <table
                    className="table"
          >
                    <tbody>
                              <tr>
                                        <td
                                                  className="p-2"
                                        >
                                                  Ksh. 
                                                  50
                                        </td>
                              </tr>
                              <tr>
                                        <td
                                                  className="p-2"
                                        >
                                                  name2
                                        </td>
                              </tr>
                              <tr>
                                        <td
                                                  className="pb-0"
                                        >
                                                  <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                                  >
                                                            Order Now
                                                  </button>
                                        </td>
                              </tr>
                    </tbody>
          </table>
</div>,
        "className": "col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-3 text-center",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="Food"
              className="img-fluid"
              src="placeholder.png"
/>,
            <table
              className="table"
>
              <tbody>
                            <tr>
                                          <td
                                                        className="p-2"
                                          >
                                                        Ksh. 
                                                        50
                                          </td>
                            </tr>
                            <tr>
                                          <td
                                                        className="p-2"
                                          >
                                                        name2
                                          </td>
                            </tr>
                            <tr>
                                          <td
                                                        className="pb-0"
                                          >
                                                        <button
                                                                      className="btn btn-primary"
                                                                      onClick={[Function]}
                                                        >
                                                                      Order Now
                                                        </button>
                                          </td>
                            </tr>
              </tbody>
</table>,
          ],
          "className": "menu-item pt-3 pl-3 pr-3 m-1",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Food",
              "className": "img-fluid",
              "src": "placeholder.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <tbody>
                <tr>
                                <td
                                                className="p-2"
                                >
                                                Ksh. 
                                                50
                                </td>
                </tr>
                <tr>
                                <td
                                                className="p-2"
                                >
                                                name2
                                </td>
                </tr>
                <tr>
                                <td
                                                className="pb-0"
                                >
                                                <button
                                                                className="btn btn-primary"
                                                                onClick={[Function]}
                                                >
                                                                Order Now
                                                </button>
                                </td>
                </tr>
</tbody>,
              "className": "table",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <tr>
                    <td
                                        className="p-2"
                    >
                                        Ksh. 
                                        50
                    </td>
</tr>,
                  <tr>
                    <td
                                        className="p-2"
                    >
                                        name2
                    </td>
</tr>,
                  <tr>
                    <td
                                        className="pb-0"
                    >
                                        <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                        >
                                                            Order Now
                                        </button>
                    </td>
</tr>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="p-2"
>
                      Ksh. 
                      50
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Ksh. ",
                        50,
                      ],
                      "className": "p-2",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Ksh. ",
                      50,
                    ],
                    "type": "td",
                  },
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="p-2"
>
                      name2
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "name2",
                      "className": "p-2",
                    },
                    "ref": null,
                    "rendered": "name2",
                    "type": "td",
                  },
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="pb-0"
>
                      <button
                                            className="btn btn-primary"
                                            onClick={[Function]}
                      >
                                            Order Now
                      </button>
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <button
                        className="btn btn-primary"
                        onClick={[Function]}
>
                        Order Now
</button>,
                      "className": "pb-0",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Order Now",
                        "className": "btn btn-primary",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "Order Now",
                      "type": "button",
                    },
                    "type": "td",
                  },
                  "type": "tr",
                },
              ],
              "type": "tbody",
            },
            "type": "table",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<MenuItem /> renders correctly with default image 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuItem
    item={
        Object {
            "img_url": "#",
            "meal": Object {
              "cost": 50,
              "img_url": null,
              "name": "name2",
            },
          }
    }
    onOrder={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="menu-item pt-3 pl-3 pr-3 m-1"
>
        <img
                alt="Food"
                className="img-fluid"
                src="placeholder.png"
        />
        <table
                className="table"
        >
                <tbody>
                        <tr>
                                <td
                                        className="p-2"
                                >
                                        Ksh. 
                                        50
                                </td>
                        </tr>
                        <tr>
                                <td
                                        className="p-2"
                                >
                                        name2
                                </td>
                        </tr>
                        <tr>
                                <td
                                        className="pb-0"
                                >
                                        <button
                                                className="btn btn-primary"
                                                onClick={[Function]}
                                        >
                                                Order Now
                                        </button>
                                </td>
                        </tr>
                </tbody>
        </table>
</div>,
      "className": "col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-3 text-center",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt="Food"
            className="img-fluid"
            src="placeholder.png"
/>,
          <table
            className="table"
>
            <tbody>
                        <tr>
                                    <td
                                                className="p-2"
                                    >
                                                Ksh. 
                                                50
                                    </td>
                        </tr>
                        <tr>
                                    <td
                                                className="p-2"
                                    >
                                                name2
                                    </td>
                        </tr>
                        <tr>
                                    <td
                                                className="pb-0"
                                    >
                                                <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                                >
                                                            Order Now
                                                </button>
                                    </td>
                        </tr>
            </tbody>
</table>,
        ],
        "className": "menu-item pt-3 pl-3 pr-3 m-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "Food",
            "className": "img-fluid",
            "src": "placeholder.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tbody>
              <tr>
                            <td
                                          className="p-2"
                            >
                                          Ksh. 
                                          50
                            </td>
              </tr>
              <tr>
                            <td
                                          className="p-2"
                            >
                                          name2
                            </td>
              </tr>
              <tr>
                            <td
                                          className="pb-0"
                            >
                                          <button
                                                        className="btn btn-primary"
                                                        onClick={[Function]}
                                          >
                                                        Order Now
                                          </button>
                            </td>
              </tr>
</tbody>,
            "className": "table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <tr>
                  <td
                                    className="p-2"
                  >
                                    Ksh. 
                                    50
                  </td>
</tr>,
                <tr>
                  <td
                                    className="p-2"
                  >
                                    name2
                  </td>
</tr>,
                <tr>
                  <td
                                    className="pb-0"
                  >
                                    <button
                                                      className="btn btn-primary"
                                                      onClick={[Function]}
                                    >
                                                      Order Now
                                    </button>
                  </td>
</tr>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="p-2"
>
                    Ksh. 
                    50
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Ksh. ",
                      50,
                    ],
                    "className": "p-2",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Ksh. ",
                    50,
                  ],
                  "type": "td",
                },
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="p-2"
>
                    name2
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "name2",
                    "className": "p-2",
                  },
                  "ref": null,
                  "rendered": "name2",
                  "type": "td",
                },
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="pb-0"
>
                    <button
                                        className="btn btn-primary"
                                        onClick={[Function]}
                    >
                                        Order Now
                    </button>
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <button
                      className="btn btn-primary"
                      onClick={[Function]}
>
                      Order Now
</button>,
                    "className": "pb-0",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Order Now",
                      "className": "btn btn-primary",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "Order Now",
                    "type": "button",
                  },
                  "type": "td",
                },
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
          "type": "table",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="menu-item pt-3 pl-3 pr-3 m-1"
>
          <img
                    alt="Food"
                    className="img-fluid"
                    src="placeholder.png"
          />
          <table
                    className="table"
          >
                    <tbody>
                              <tr>
                                        <td
                                                  className="p-2"
                                        >
                                                  Ksh. 
                                                  50
                                        </td>
                              </tr>
                              <tr>
                                        <td
                                                  className="p-2"
                                        >
                                                  name2
                                        </td>
                              </tr>
                              <tr>
                                        <td
                                                  className="pb-0"
                                        >
                                                  <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                                  >
                                                            Order Now
                                                  </button>
                                        </td>
                              </tr>
                    </tbody>
          </table>
</div>,
        "className": "col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-3 text-center",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="Food"
              className="img-fluid"
              src="placeholder.png"
/>,
            <table
              className="table"
>
              <tbody>
                            <tr>
                                          <td
                                                        className="p-2"
                                          >
                                                        Ksh. 
                                                        50
                                          </td>
                            </tr>
                            <tr>
                                          <td
                                                        className="p-2"
                                          >
                                                        name2
                                          </td>
                            </tr>
                            <tr>
                                          <td
                                                        className="pb-0"
                                          >
                                                        <button
                                                                      className="btn btn-primary"
                                                                      onClick={[Function]}
                                                        >
                                                                      Order Now
                                                        </button>
                                          </td>
                            </tr>
              </tbody>
</table>,
          ],
          "className": "menu-item pt-3 pl-3 pr-3 m-1",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Food",
              "className": "img-fluid",
              "src": "placeholder.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <tbody>
                <tr>
                                <td
                                                className="p-2"
                                >
                                                Ksh. 
                                                50
                                </td>
                </tr>
                <tr>
                                <td
                                                className="p-2"
                                >
                                                name2
                                </td>
                </tr>
                <tr>
                                <td
                                                className="pb-0"
                                >
                                                <button
                                                                className="btn btn-primary"
                                                                onClick={[Function]}
                                                >
                                                                Order Now
                                                </button>
                                </td>
                </tr>
</tbody>,
              "className": "table",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <tr>
                    <td
                                        className="p-2"
                    >
                                        Ksh. 
                                        50
                    </td>
</tr>,
                  <tr>
                    <td
                                        className="p-2"
                    >
                                        name2
                    </td>
</tr>,
                  <tr>
                    <td
                                        className="pb-0"
                    >
                                        <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                        >
                                                            Order Now
                                        </button>
                    </td>
</tr>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="p-2"
>
                      Ksh. 
                      50
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Ksh. ",
                        50,
                      ],
                      "className": "p-2",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Ksh. ",
                      50,
                    ],
                    "type": "td",
                  },
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="p-2"
>
                      name2
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "name2",
                      "className": "p-2",
                    },
                    "ref": null,
                    "rendered": "name2",
                    "type": "td",
                  },
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="pb-0"
>
                      <button
                                            className="btn btn-primary"
                                            onClick={[Function]}
                      >
                                            Order Now
                      </button>
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <button
                        className="btn btn-primary"
                        onClick={[Function]}
>
                        Order Now
</button>,
                      "className": "pb-0",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Order Now",
                        "className": "btn btn-primary",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "Order Now",
                      "type": "button",
                    },
                    "type": "td",
                  },
                  "type": "tr",
                },
              ],
              "type": "tbody",
            },
            "type": "table",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<MenuItem /> renders correctly with image 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuItem
    item={
        Object {
            "img_url": "https://placehold.it/10x10",
            "meal": Object {
              "cost": 50,
              "img_url": null,
              "name": "name2",
            },
          }
    }
    onOrder={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="menu-item pt-3 pl-3 pr-3 m-1"
>
        <img
                alt="Food"
                className="img-fluid"
                src="placeholder.png"
        />
        <table
                className="table"
        >
                <tbody>
                        <tr>
                                <td
                                        className="p-2"
                                >
                                        Ksh. 
                                        50
                                </td>
                        </tr>
                        <tr>
                                <td
                                        className="p-2"
                                >
                                        name2
                                </td>
                        </tr>
                        <tr>
                                <td
                                        className="pb-0"
                                >
                                        <button
                                                className="btn btn-primary"
                                                onClick={[Function]}
                                        >
                                                Order Now
                                        </button>
                                </td>
                        </tr>
                </tbody>
        </table>
</div>,
      "className": "col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-3 text-center",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt="Food"
            className="img-fluid"
            src="placeholder.png"
/>,
          <table
            className="table"
>
            <tbody>
                        <tr>
                                    <td
                                                className="p-2"
                                    >
                                                Ksh. 
                                                50
                                    </td>
                        </tr>
                        <tr>
                                    <td
                                                className="p-2"
                                    >
                                                name2
                                    </td>
                        </tr>
                        <tr>
                                    <td
                                                className="pb-0"
                                    >
                                                <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                                >
                                                            Order Now
                                                </button>
                                    </td>
                        </tr>
            </tbody>
</table>,
        ],
        "className": "menu-item pt-3 pl-3 pr-3 m-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "Food",
            "className": "img-fluid",
            "src": "placeholder.png",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <tbody>
              <tr>
                            <td
                                          className="p-2"
                            >
                                          Ksh. 
                                          50
                            </td>
              </tr>
              <tr>
                            <td
                                          className="p-2"
                            >
                                          name2
                            </td>
              </tr>
              <tr>
                            <td
                                          className="pb-0"
                            >
                                          <button
                                                        className="btn btn-primary"
                                                        onClick={[Function]}
                                          >
                                                        Order Now
                                          </button>
                            </td>
              </tr>
</tbody>,
            "className": "table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <tr>
                  <td
                                    className="p-2"
                  >
                                    Ksh. 
                                    50
                  </td>
</tr>,
                <tr>
                  <td
                                    className="p-2"
                  >
                                    name2
                  </td>
</tr>,
                <tr>
                  <td
                                    className="pb-0"
                  >
                                    <button
                                                      className="btn btn-primary"
                                                      onClick={[Function]}
                                    >
                                                      Order Now
                                    </button>
                  </td>
</tr>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="p-2"
>
                    Ksh. 
                    50
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Ksh. ",
                      50,
                    ],
                    "className": "p-2",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Ksh. ",
                    50,
                  ],
                  "type": "td",
                },
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="p-2"
>
                    name2
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "name2",
                    "className": "p-2",
                  },
                  "ref": null,
                  "rendered": "name2",
                  "type": "td",
                },
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <td
                    className="pb-0"
>
                    <button
                                        className="btn btn-primary"
                                        onClick={[Function]}
                    >
                                        Order Now
                    </button>
</td>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <button
                      className="btn btn-primary"
                      onClick={[Function]}
>
                      Order Now
</button>,
                    "className": "pb-0",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Order Now",
                      "className": "btn btn-primary",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "Order Now",
                    "type": "button",
                  },
                  "type": "td",
                },
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
          "type": "table",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="menu-item pt-3 pl-3 pr-3 m-1"
>
          <img
                    alt="Food"
                    className="img-fluid"
                    src="placeholder.png"
          />
          <table
                    className="table"
          >
                    <tbody>
                              <tr>
                                        <td
                                                  className="p-2"
                                        >
                                                  Ksh. 
                                                  50
                                        </td>
                              </tr>
                              <tr>
                                        <td
                                                  className="p-2"
                                        >
                                                  name2
                                        </td>
                              </tr>
                              <tr>
                                        <td
                                                  className="pb-0"
                                        >
                                                  <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                                  >
                                                            Order Now
                                                  </button>
                                        </td>
                              </tr>
                    </tbody>
          </table>
</div>,
        "className": "col-10 offset-1 offset-sm-0 col-sm-6 col-md-4 col-lg-3 text-center",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="Food"
              className="img-fluid"
              src="placeholder.png"
/>,
            <table
              className="table"
>
              <tbody>
                            <tr>
                                          <td
                                                        className="p-2"
                                          >
                                                        Ksh. 
                                                        50
                                          </td>
                            </tr>
                            <tr>
                                          <td
                                                        className="p-2"
                                          >
                                                        name2
                                          </td>
                            </tr>
                            <tr>
                                          <td
                                                        className="pb-0"
                                          >
                                                        <button
                                                                      className="btn btn-primary"
                                                                      onClick={[Function]}
                                                        >
                                                                      Order Now
                                                        </button>
                                          </td>
                            </tr>
              </tbody>
</table>,
          ],
          "className": "menu-item pt-3 pl-3 pr-3 m-1",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Food",
              "className": "img-fluid",
              "src": "placeholder.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <tbody>
                <tr>
                                <td
                                                className="p-2"
                                >
                                                Ksh. 
                                                50
                                </td>
                </tr>
                <tr>
                                <td
                                                className="p-2"
                                >
                                                name2
                                </td>
                </tr>
                <tr>
                                <td
                                                className="pb-0"
                                >
                                                <button
                                                                className="btn btn-primary"
                                                                onClick={[Function]}
                                                >
                                                                Order Now
                                                </button>
                                </td>
                </tr>
</tbody>,
              "className": "table",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <tr>
                    <td
                                        className="p-2"
                    >
                                        Ksh. 
                                        50
                    </td>
</tr>,
                  <tr>
                    <td
                                        className="p-2"
                    >
                                        name2
                    </td>
</tr>,
                  <tr>
                    <td
                                        className="pb-0"
                    >
                                        <button
                                                            className="btn btn-primary"
                                                            onClick={[Function]}
                                        >
                                                            Order Now
                                        </button>
                    </td>
</tr>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="p-2"
>
                      Ksh. 
                      50
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Ksh. ",
                        50,
                      ],
                      "className": "p-2",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Ksh. ",
                      50,
                    ],
                    "type": "td",
                  },
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="p-2"
>
                      name2
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "name2",
                      "className": "p-2",
                    },
                    "ref": null,
                    "rendered": "name2",
                    "type": "td",
                  },
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <td
                      className="pb-0"
>
                      <button
                                            className="btn btn-primary"
                                            onClick={[Function]}
                      >
                                            Order Now
                      </button>
</td>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <button
                        className="btn btn-primary"
                        onClick={[Function]}
>
                        Order Now
</button>,
                      "className": "pb-0",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Order Now",
                        "className": "btn btn-primary",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "Order Now",
                      "type": "button",
                    },
                    "type": "td",
                  },
                  "type": "tr",
                },
              ],
              "type": "tbody",
            },
            "type": "table",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
